[package]
name = "faces_quic_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quiche_server_testing"
path = "./bin_test/main_server_test.rs"

[dependencies]
quiche = "0.23.2"
log = "0.4.25"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
ring = "0.17.9"
env_logger = "0.11.6"
uuid = { version = "1.15.1", features = ["v4"] }
crossbeam-channel = "0.5.14"
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
serde = "1.0.219"
serde_json = "1.0.140"
